# tatm

./: .buildinfo  .flake8  .gitignore  .readthedocs.yaml  CONTRIBUTING.md  Makefile  README.md  cli.html  config.html  config_api.html  configuration.html  data.html  data_api.html  dataset_splits.html  genindex.html  getting_started.html  index.html  metadata.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tatm_tokenize_job.submit  text_dataset.html  tokenizer_api.html
.github/workflows/: build_docs.yml  ci.yml  create_release.yml  deploy.yml  release-prep.yml  release.yml
_sources/: cli.md.txt  data.md.txt  dataset_splits.md.txt  index.md.txt  metadata.md.txt  text_dataset.md.txt
admin_docs/: metadata_store_setup.html
api_docs/: cli.html  config_api.html  data_api.html  metadata_store_api.html  tokenizer_api.html
docs/: cli.md  conf.py  config.md  config_api.md  configuration.md  data_api.md  dataset_splits.md  getting_started.md  index.md  text_dataset.md
docs/admin_docs/: metadata_store_setup.md
docs/api_docs/: cli.md  metadata_store_api.md  tokenizer_api.md
scripts/metadata/: create_json_backend.py  load_open_metadata_backend.py  utils.py
src/tatm/: __init__.py  config.py  globals.py  utils.py  version.py
src/tatm/cli/: __init__.py  base.py  data.py  run.py  tokenizer.py  utils.py
src/tatm/compute/: __init__.py  job.py  run.py  slurm.py
src/tatm/compute/templates/slurm/: ray.submit
src/tatm/data/: __init__.py  data.py  dataset.py  datasets.py  memmap_dataset.py  metadata.py  utils.py
src/tatm/data/metadata_store/: __init__.py  interface.py  metadata_backend.py  open_metadata_backend.py
src/tatm/tokenizer/: __init__.py  engine.py  metadata.py  utils.py
tests/cli/: test_cli_run.py  test_run.py
tests/compute/: test_compute_run.py  test_slurm.py
tests/compute/configs/: test_config.yaml
tests/compute/templates/slurm/: ray.submit  ray_singularity.submit
tests/config/: test_config_validation.py  test_load_config.py
tests/config/examples/: base.yaml  base2.yaml  metadata_backend_only.yaml
tests/data/: metadata_test.json  metadata_test.yaml  test_data.py  test_datasets.py  test_memmap_dataset.py  test_metadata.py  test_metadata_beckend.py  test_open_metadata_metadata_backend.py  test_token_processing.py
tests/data/corpus_data/: corpus_data.py  create_corpus_data.py  metadata.yaml
tests/data/json_corpus_data/: create_data.py  metadata.yaml
tests/data/json_corpus_data/primary/: primary_text_dataset.json
tests/data/json_corpus_data/secondary/: secondary_text_dataset.json
tests/data/json_data/: create_data.py  create_test_data.py  metadata.yaml  test.json
tests/data/json_dataset/: create_test_dataset.py  metadata.yaml
tests/data/multimodal/: annotations.json  annotations.jsonl  attributions.json
tests/tokenizer/: test_engine.py  test_engine_internals.py  test_load_tokenizer.py  test_metadata_creation.py
tests/utils/: test_utils.py
