[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[project]
name = "tatm"
version = "0.2.1"
description = ""
authors = [
{ name = "Kempner Institute at Harvard University", email = "kempner-research-engineering@g.harvard.edu" }
]
readme = "README.md"
classifiers = [
"Programming Language :: Python :: 3",
"License :: OSI Approved :: MIT License",
"Operating System :: OS Independent"
]
requires-python = "^3.10"
dependencies = [
    "click (>=8.1.7,<9.0.0)",
    "datasets (>=3.0.1,<4.0.0)",
    "tokenizers>=0.20.0",
    "ray[default] (>=2.34.0,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "omegaconf (>=2.3.0,<3.0.0)",
    "torch (>=2.4.1,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "aiohttp>=3.10.11",
    "pillow (>=11.0.0,<12.0.0)",
    "openmetadata-ingestion==1.5.12",
    "zstandard (>=0.23.0,<0.24.0)"
]


[project.scripts]
tatm = "tatm:cli"


[tool.poetry]
packages = [{include = "tatm", from = "src"}]


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
sphinx = "^8.0.2"
myst-parser = "^4.0.0"
isort = "^5.13.2"
sphinx_rtd_theme = "^3.0.1"


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
isort = "^5.13.2"


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^8.0.2"
myst-parser = "^4.0.0"
sphinx_rtd_theme = "^3.0.1"


[tool.isort]
profile = "black"
skip = ["scripts/metadata/load_open_metadata_backend.py"]
